<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_16dp"
    android:paddingRight="@dimen/dimen_16dp"
    android:paddingBottom="@dimen/dimen_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/HumanIdTextView.Light.Black"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/message_humanid_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_10sp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/HumanIdTextView.Medium.Black"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/title_switching_number"
        android:textSize="@dimen/text_size_14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/HumanIdTextView.BlackColor"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/message_send_otp"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/HumanIdTextView.BlackColor"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/message_enter_4_digits"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_12sp" />


    <com.chaos.view.PinView
        android:id="@+id/edtOtp"
        style="@style/HumanIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:cursorVisible="true"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="@dimen/text_size_14sp"
        app:itemCount="4"
        app:itemSpacing="@dimen/dimen_32dp"
        app:lineColor="@color/colorWarmGrey"
        app:lineWidth="@dimen/dimen_half_dp"
        app:viewType="line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResendCode"
            style="@style/HumanIdTextButton.Medium.TwilightBlue"
            android:layout_weight="1"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/action_resend_code"
            android:textSize="@dimen/text_size_10sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCallMe"
            style="@style/HumanIdTextButton.Medium.TwilightBlue"
            android:layout_weight="1"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/action_call_me_instead"
            android:textSize="@dimen/text_size_10sp" />
    </LinearLayout>
</LinearLayout>
