<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTwilightBlue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_16dp"
        android:paddingRight="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@drawable/bg_rectangle_white_top_corner"
        tools:context="com.human.android.presentation.otp.OtpFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:src="@drawable/ic_logo_humanid_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSwitchMessage"
            android:text="@string/message_humanid_description"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_10sp"
            android:gravity="center"
            style="@style/HumanIdTextView.Light.Black"
            android:layout_marginBottom="@dimen/dimen_25dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/HumanIdTextView.Medium.Black"
            android:text="@string/title_verification_number"
            android:textSize="@dimen/text_size_14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            style="@style/HumanIdTextView.Black"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center_horizontal"
            android:text="@string/message_send_otp_switch"
            android:textSize="@dimen/text_size_12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubMessage"
            style="@style/HumanIdTextView.Black"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center_horizontal"
            android:text="@string/sub_message_register_number"
            android:textSize="@dimen/text_size_12sp" />

        <com.chaos.view.PinView
            android:id="@+id/edtOtp"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:cursorVisible="true"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="@dimen/text_size_14sp"
            app:itemCount="4"
            app:itemSpacing="@dimen/dimen_32dp"
            app:lineColor="@color/colorWarmGrey"
            app:lineWidth="@dimen/dimen_half_dp"
            app:viewType="line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnResendCode"
                style="@style/HumanIdTextButton.Medium.TwilightBlue"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/action_resend_code"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:textSize="@dimen/text_size_10sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDifferentNumber"
                style="@style/HumanIdTextButton.Medium.TwilightBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/action_different_number"
                android:textSize="@dimen/text_size_10sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>